Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/Produto_da_nota_fiscal__c.object-meta.xml
<CustomObject>
    <label>Produto da nota fiscal</label>
    <nameField>
        <label>Nombre de  Produto da nota fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos da nota fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>