Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Bairro_Distrito_do_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Bairro_Distrito_do_Destinatario__c</fullName>
    <label>Bairro / Distrito do Destinatário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>