Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/CEP_do_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>CEP_do_Destinatario__c</fullName>
    <label>CEP do Destinatário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>