Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/CFOP__c.field-meta.xml
<CustomField>
    <fullName>CFOP__c</fullName>
    <label>CFOP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>