Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/CNPJ_do_Emitente__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_do_Emitente__c</fullName>
    <label>CNPJ do Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>