Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Codigo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_produto__c</fullName>
    <label>Código do produto</label>
    <length>60</length>
    <type>Text</type>
</CustomField>