Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Codigo_NCM__c.field-meta.xml
<CustomField>
    <fullName>Codigo_NCM__c</fullName>
    <label>Codigo NCM</label>
    <length>8</length>
    <type>Text</type>
</CustomField>