Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Cultivar__c.field-meta.xml
<CustomField>
    <fullName>Cultivar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultivar</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos da nota fiscal (Cultivar)</relationshipLabel>
    <relationshipName>Produtos_da_nota_fiscal1</relationshipName>
    <type>Lookup</type>
</CustomField>