Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição do produto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>