Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Endere_o_do_Emitente__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_do_Emitente__c</fullName>
    <label>Endereço do Emitente</label>
    <type>TextArea</type>
</CustomField>