Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/GTIN_o_Codigo_EAN_Tributavel__c.field-meta.xml
<CustomField>
    <fullName>GTIN_o_Codigo_EAN_Tributavel__c</fullName>
    <label>GTIN o Código EAN Tributável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>