Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DONMARIO</fullName>
            </value>
            <value>
                <fullName>BRASMAX</fullName>
            </value>
            <value>
                <fullName>NEOGEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>