Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Nome_Razao_Social_Emitente__c.field-meta.xml
<CustomField>
    <fullName>Nome_Razao_Social_Emitente__c</fullName>
    <label>Nome / Razão Social Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>