Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Nota_Fiscal_Eletr_nica__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal_Eletr_nica__c</fullName>
    <label>Nota Fiscal Eletrônica</label>
    <referenceTo>Nota_Fiscal_Eletr_nica__c</referenceTo>
    <relationshipLabel>Produtos da nota fiscal</relationshipLabel>
    <relationshipName>Produtos_da_nota_fiscal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>