Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Nota_Fiscal_Eletronica__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal_Eletronica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota Fiscal Eletrônica</label>
    <referenceTo>Nota_Fiscal_Eletr_nica__c</referenceTo>
    <relationshipLabel>Produtos da nota fiscal (Nota Fiscal Eletrônica)</relationshipLabel>
    <relationshipName>Produtos_da_nota_fiscal1</relationshipName>
    <type>Lookup</type>
</CustomField>