Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Numero_da_FCI__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_FCI__c</fullName>
    <label>Número da FCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>