Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Numero_do_pedido_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido_de_compra__c</fullName>
    <label>Número do pedido de compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>