Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Quantidade_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Comercial__c</fullName>
    <label>Quantidade Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>