Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Quantidade_processado_kg__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_processado_kg__c</fullName>
    <label>Quantidade processado (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>