Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Quantidade_Tributavel__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Tributavel__c</fullName>
    <label>Quantidade Tributável</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>