Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Siglas_da_UF_do_Emitente__c.field-meta.xml
<CustomField>
    <fullName>Siglas_da_UF_do_Emitente__c</fullName>
    <label>Siglas da UF do Emitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>