Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Telefone_do_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Telefone_do_Destinatario__c</fullName>
    <label>Telefone do Destinatário</label>
    <type>Phone</type>
</CustomField>