Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Unidade_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Comercial__c</fullName>
    <label>Unidade Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>