Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Valor_Bonificacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_Bonificacao__c</fullName>
    <label>Valor Bonificação</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>