Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Valor_do_Desconto__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Desconto__c</fullName>
    <label>Valor do Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>