Salesforce/main/default/main/default/objects/Produto_da_nota_fiscal__c/fields/Valor_unitario_de_tributacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_unitario_de_tributacao__c</fullName>
    <label>Valor unitário de tributação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>